--- a/notebook/data cleaning.ipynb
+++ b/notebook/data cleaning.ipynb
@@ -19,29 +19,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data\n",
-    "movies_path = \"tmdb_5000_movies.csv\"\n",
-    "credits_path = \"tmdb_5000_credits.csv\"\n",
-    "netflix_path = \"netflix_titles.csv\""
+    "netflix_path = \"netflix_titles_.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read CSV files\n",
+    "netflix_df = pd.read_csv(netflix_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Netflix Titles Data Cleaning"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Copy dataset\n",
+    "netflix_clean = netflix_df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zixin kuai\\AppData\\Local\\Temp\\ipykernel_3956\\2415529911.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  netflix_clean[col].fillna(\"Unknown\", inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fill missing values with 'Unknown'\n",
+    "text_columns = [\"description\", \"director\", \"cast\", \"country\", \"date_added\", \"rating\", \"duration\"]\n",
+    "for col in text_columns:\n",
+    "    netflix_clean[col].fillna(\"Unknown\", inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'date_added' to datetime format\n",
+    "netflix_clean[\"date_added\"] = pd.to_datetime(netflix_clean[\"date_added\"], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicate rows\n",
+    "netflix_clean.drop_duplicates(inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Cleaned Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save cleaned datasets to CSV\n",
+    "netflix_clean.to_csv(\"Cleaned_Netflix_Titles_Data.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Cleaning Completed. Cleaned files saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Data Cleaning Completed. Cleaned files saved.\")"
+   ]
   }
  ],
  "metadata": {
